Upgrade Milo OPC UA (#1005)
* Type conversions are working

* Intermediate state, working on OpcUaSubscriptionConsumer

* Adapter is building, fix EmbeddedOpcUaServerExtension next

* EmbeddedOpcUaServerExtension building, all tests fail

* Most of embedded server working

* Fixed TLS

* javax->jakarta

Reading working completely.
Most of writing is working.

* All features from the old version are now working with the new version

* Fix test server security, fix client

* upgrade Modbus digitalpetri library

---------

Co-authored-by: Jochen Mader <jochen.mader@hivemq.com>